# alaya

./: .clang-format  .clang-format_original  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  t_main.cpp  test_RQ.cpp  test_heap.cpp  test_main.cpp
include/DisComm/: CMakeLists.txt  main.cpp  main.hpp  message_queue.hpp  mpi_env.hpp  search_disk_index_mpi.cu
include/alaya/Database/: Database.h
include/alaya/Table/: Table.h
include/alaya/TableSchema/: TableSchema.h
include/alaya/index/: index.h  index_factory.h
include/alaya/index/bucket/: bucket.h  imi.h  ivf.h  ivf_origin.h  multitable.h  test.h
include/alaya/index/graph/: builder.hpp  graph.h  graph.hpp  hnsw.h  nsg.h  nsg.hpp  upper_layer.h
include/alaya/index/graph/hnsw/: HNSWInitializer.hpp  hnsw.hpp
include/alaya/index/graph/nsg/: nndescent.hpp  nsg.hpp
include/alaya/index/graph/nsglib/: nndescent.hpp  nsg.hpp  utils.h
include/alaya/index/quant/: fp32_quant.hpp  sq4_quant.hpp  sq8_quant.hpp
include/alaya/index/quantizer/: fp32_quant.hpp  normal_quantizer.h  product_quantizer.h  quant.hpp  quantizer.h  residual_quantizer.h  scalar_quantizer.h  sq4_quant.hpp  sq8_quant.hpp
include/alaya/searcher/: graph_search.h  graph_searcher.hpp  ivf_searcher.h  pq_searcher.h  searcher.h
include/alaya/searcher/bucket/: imi_searcher.h  ivf_searcher.h  ivf_searcher_origin.h  ordered_list_merger.h
include/alaya/searcher/graph/: searcher.hpp
include/alaya/utils/: alaya_assert.h  alaya_exception.h  avx2_distance.h  avx512_distance.h  distance.h  heap.h  io_utils.h  kmeans.h  kmeanss.h  memory.h  metric_type.h  neighbor.hpp  platform_macros.h  pool.h  random_utils.h  recall_utils.h  sse_distance.h  tsc_timer.h  type_utils.h
include/alaya/utils/simd/: distance.hpp
include/azalea/: index.h
include/azalea/index/: MetricType.h  computer.h  index.h  index_factory.h  searcher.h
include/azalea/index/bucket.h/: bucket.h
include/azalea/index/graph/: graph.h  upper_layer.h
include/azalea/index/quant/: pq_quant.h  quant.h  rq_quant.h  sq_quant.h
python/: bindings.cpp  setup.py
python/py_utils/: io_utils.py
src/: Database.cpp  Table.cpp  TableSchema.cpp
src/utils/: io_utils.cpp  kmeans.cpp  random_utils.cpp
tests/: CMakeLists.txt  RQ_test.cpp  bucket_test.cpp  distance_test.cpp  graph_test.cpp  hello_test.cc  ivf_test.cpp  pool_test.cpp  pool_test.cppx  pq_test.cpp  tableschema_test.cpp
